09/26/2003 Bob Rossi <bob@brasko.net>

   * types.h: Changed comments.
   * types.c: tgdb_print_item, changed case TGDB_UPDATE_FILE_POSITION,
   TGDB_UPDATE_SOURCE_FILES, TGDB_SOURCES_DENIED,
   TGDB_ABSOLUTE_SOURCE_ACCEPTED, TGDB_ABSOLUTE_SOURCE_DENIED,
   TGDB_DISPLAY_UPDATE, TDGB_QUIT_NORMAL, TGDB_QUIT_ABNORMAL.
   removed comments.
   tgdb_delete_command, changed case TGDB_UPDATE_FILE_POSITION,
   TGDB_UPDATE_SOURCE_FILES, TGDB_SOURCES_DENIED,
   TGDB_ABSOLUTE_SOURCE_ACCEPTED, TGDB_ABSOLUTE_SOURCE_DENIED,
   TGDB_DISPLAY_UPDATE, TGDB_QUIT_NORMAL, TGDB_QUIT_ABNORMAL.

09/25/2003 Bob Rossi <bob@brasko.net>

   * commands.c: 'struct commands' changed member 'struct queue
   *source_files' to 'struct tgdb_list *inferior_source_files'.
   commands_initialize, initialize changed member variable.
   commands_process_source_line(), commands_send_gui_sources()
   * types.h: Fix comments for TGDB_UPDATE_BREAKPOINTS, 
   TGDB_UPDATE_FILE_POSITION and TGDB_UPDATE_SOURCE_FILES.
   * types.c: tgdb_print_item, implement TGDB_UPDATE_SOURCE_FILES
   tgdb_breakpoint_free, make static.
   add static tgdb_source_files_free.
   tgdb_delete_command, implement TGDB_UPDATE_SOURCE_FILES case.
   * driver.c: stdin_input

09/25/2003 Bob Rossi <bob@brasko.net>

   * commands.c: commands_process_info_source
   * types.h: change comment for TGDB_UPDATE_BREAKPOINTS and 
   TGDB_UPDATE_FILE_POSITION.
   Add 'struct tgdb_file_position' and comment.
   * types.c: tgdb_print_item, implement TGDB_UPDATE_FILE_POSITION case.
   tgdb_delete_command, implement TGDB_UPDATE_FILE_POSITION case.

09/25/2003 Bob Rossi <bob@brasko.net>

   * commands.c: Add new #include "tgdb_list.h"
   'struct commands' changed member 'struct queue
   *breakpoint_queue' to 'struct tgdb_list *breakpoint_list'.
   commands_initialize, initialize changed member variable.
   parse_breakpoint, append the data to the new list ( instead of old one )
   commands_set_state, append new list into tgdb queue.